5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1758_1577.log
== TEST (2019-05-23 10:51:07) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))

d=(a*t**2/2)+v*
print(d)
-- ERROR:
File "XXXX", line 6
    d=(a*t**2/2)+v*
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:51:39) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))

d=(a*(t**2)/2)+v*1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:48:46) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))

v=zeros(n)
i=0
while(i<n):
	d=(a*(i**2)/2)+v*i
	v[i]=d
	i=i+1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:49:07) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))

v=zeros(n)
i=0
while(i<n):
	d=(a*(i**2)/2)+v*i
	v[i]=d
	i=i+1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:49:32) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))

v=zeros(n)
i=0
while(i<n):
	d=(a*(i**2)/2)+v*i
	v[i]=d
	i=i+1
print(v)

-- EXECUTION TIME:
0.598636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 10, in <module>
    v[i]=d
ValueError: setting an array element with a sequence.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:49:36) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))

v=zeros(n)
i=0
while(i<n):
	d=(a*(i**2)/2)+v*i
	v[i]=d
	i=i+1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:50:13) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))

v=zeros(n)
i=0
while(i<n):
	d=((a*(i**2))/2)+v*i
	v[i]=d
	i=i+1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:50:25) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))

v=zeros(n)
i=0
while(i<n):
	d=((a*(i**2))/2)+v*i
	v[i]=d
	i=i+1
print(v)

-- EXECUTION TIME:
0.50184
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 10, in <module>
    v[i]=d
ValueError: setting an array element with a sequence.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:51:21) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))

v=zeros(n)
i=0

while(i<n):
	d=((a*(i**2))/2)+v*i
	v[i]=d
	i=i+1
print(v)

-- EXECUTION TIME:
0.469961
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 11, in <module>
    v[i]=d
ValueError: setting an array element with a sequence.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:51:21) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))

v=zeros(n)
i=0

while(i<n):
	d=((a*(i**2))/2)+v*i
	v[i]=d
	i=i+1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:46:24) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))

v=zeros(n)
i=0

while(i<n):
	d=((a*(i**2))/2)+v*i
	v[i]=d
	i=i+1
print(v)

-- EXECUTION TIME:
0.551723
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 11, in <module>
    v[i]=d
ValueError: setting an array element with a sequence.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:46:24) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))

v=zeros(n)
i=0

while(i<n):
	d=((a*(i**2))/2)+v*i
	v[i]=d
	i=i+1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:46:29) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))

v=zeros(n)
i=0

while(i<n):
	d=((a*(i**2))/2)+v*i
	v[i]=d
	i=i+1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:50:32) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))

v=zeros(n)
i=0

while(i<n):
	d=(a*(i**2)/2)+v*i
	v[i]=d
	i=i+1
print(v)

-- EXECUTION TIME:
0.452493
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 11, in <module>
    v[i]=d
ValueError: setting an array element with a sequence.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:50:35) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))

v=zeros(n)
i=0

while(i<n):
	d=(a*(i**2)/2)+v*i
	v[i]=d
	i=i+1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:09:43) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))
i=0
l1=arange(n)
l2=zeros(n, dtype=float)
while(i<n):
	l2[i]=((a*l1[i]**2)/2)+b*l1[i]
	i=i+1
print(l2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:10:04) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))
i=0
l1=arange(n)
l2=zeros(n, dtype=float)
while(i<n):
	l2[i]=(a*l1[i]**2)/2+b*l1[i]
	i=i+1
print(l2)

-- EXECUTION TIME:
0.376401
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 9, in <module>
    l2[i]=(a*l1[i]**2)/2+b*l1[i]
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:10:05) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))
i=0
l1=arange(n)
l2=zeros(n, dtype=float)
while(i<n):
	l2[i]=(a*l1[i]**2)/2+b*l1[i]
	i=i+1
print(l2)

-- EXECUTION TIME:
0.510615
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 9, in <module>
    l2[i]=(a*l1[i]**2)/2+b*l1[i]
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:10:36) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))
i=0
l1=arange(n)
l2=zeros(n,dtype=float)
while(i<n):
	l2[i]=(a*l1[i]**2)/2+b*l1[i]
	i=i+1
print(l2)

-- EXECUTION TIME:
0.363578
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 9, in <module>
    l2[i]=(a*l1[i]**2)/2+b*l1[i]
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:10:40) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))
i=0
l1=arange(n)
l2=zeros(n,dtype=float)
while(i<n):
	l2[i]=(a*l1[i]**2)/2+b*l1[i]
	i=i+1
print(l2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:11:12) 
-- CODE:
from numpy import*
a=float(input("a:"))
v=float(input("v:"))
n=int(input("n:"))
i=0
l1=arange(n)
l2=zeros(n,dtype=float)
while(i<n):
	l2[i]=(a*l1[i]**2)/2+v*l1[i]
	i=i+1
print(l2)

-- EXECUTION TIME:
0.330953
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
